--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <title>Chat</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 </head>
 <body>
@@ -21,6 +23,11 @@
     <input type="text" name="say" class="inputSay">
     <input type="submit" data-type="reponse">
 </section>
+
+<div class="ui-widget">
+    <label for="tags">Tags: </label>
+    <input id="tags">
+</div>
 
 
 <script src="/socket.io/socket.io.js"></script>
