setup git for heroku

--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
     <input type="submit" data-type="reponse">
 </section>
 
-<div class="ui-widget">
-    <label for="tags">Tags: </label>
-    <input id="tags">
-</div>
+<!--<div class="ui-widget">-->
+    <!--<label for="tags">Tags: </label>-->
+    <!--<input id="tags">-->
+<!--</div>-->
 
 
 <script src="/socket.io/socket.io.js"></script>
