autocomplete based on the first letters typed is working

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,7 @@
 
 <section class="conversation"></section>
 
-<section class="autocomplete-aera">
-
-</section>
+<section class="autocomplete-aera"></section>
 
 <section class="controls">
     <input type="text" name="say" class="inputSay">
@@ -33,7 +31,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="client.js"></script>
 <script src="autocomplete.js"></script>
-<script src="style.css" type=""
 
 
 </body>
