--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!--<script src="../libraries/jquery-1.12.4.js"></script>-->
+    <!--<script src="../libraries/jquery-ui.js"></script>-->
 
 </head>
 <body>
