essai de corriger le bug du clavier sur android, ajout d'un peu de css

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
 <section class="controls">
     <input type="text" name="say" class="inputSay">
-    <input type="submit" data-type="reponse">
+    <input type="submit" data-type="reponse" value ="↪" class="submit">
 </section>
 
 <!--<div class="ui-widget">-->
