prevent the native android keyboard to show

--- a/public/custom-keyboard/index.html
+++ b/public/custom-keyboard/index.html
@@ -5,7 +5,11 @@
 
 <!-- The basis of the keyboard is from https://code.tutsplus.com/tutorials/creating-a-keyboard-with-css-and-jquery--net-5774 -->
 
-<input type="text" name="say" class="inputSay">
+<section class="controls">
+    <!--<input type="text" name="say" class="inputSay">-->
+    <div class="inputSay"></div>
+    <input type="submit" data-type="reponse" value ="↪" class="submit">
+</section>
 <section id="custom-keyboard">
     <ul class="keyrow">
             <li class="symbol">
