add a fake pipe to make the div look like an input

--- a/public/custom-keyboard/index.html
+++ b/public/custom-keyboard/index.html
@@ -56,18 +56,18 @@
                 <span class="off">0</span>
                 <span class="on">)</span>
             </li>
-            <li class="symbol">
-                <span class="off">-</span>
-                <span class="on">_</span>
-            </li>
-            <li class="symbol">
-                <span class="off">=</span>
-                <span class="on">+</span>
-            </li>
+            <!--<li class="symbol">-->
+                <!--<span class="off">-</span>-->
+                <!--<span class="on">_</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">=</span>-->
+                <!--<span class="on">+</span>-->
+            <!--</li>-->
             <li class="delete">delete</li>
         </ul> <!-- end of row -->
     <ul class="keyrow">
-    <li class="tab">tab</li>
+        <!--<li class="tab">tab</li>-->
         <li class="letter">q</li>
         <li class="letter">w</li>
         <li class="letter">e</li>
@@ -78,18 +78,18 @@
         <li class="letter">i</li>
         <li class="letter">o</li>
         <li class="letter">p</li>
-        <li class="symbol">
-            <span class="off">[</span>
-            <span class="on">{</span>
-        </li>
-        <li class="symbol">
-            <span class="off">]</span>
-            <span class="on">}</span>
-        </li>
-        <li class="symbol">
-            <span class="off">\</span>
-            <span class="on">|</span>
-        </li>
+        <!--<li class="symbol">-->
+            <!--<span class="off">[</span>-->
+            <!--<span class="on">{</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+            <!--<span class="off">]</span>-->
+            <!--<span class="on">}</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+            <!--<span class="off">\</span>-->
+            <!--<span class="on">|</span>-->
+        <!--</li>-->
     </ul> <!-- end of row -->
     <ul class="keyrow">
     <li class="capslock">caps lock</li>
@@ -102,10 +102,10 @@
         <li class="letter">j</li>
         <li class="letter">k</li>
         <li class="letter">l</li>
-        <li class="symbol">
-            <span class="off">;</span>
-            <span class="on">:</span>
-        </li>
+        <!--<li class="symbol">-->
+            <!--<span class="off">;</span>-->
+            <!--<span class="on">:</span>-->
+        <!--</li>-->
         <li class="symbol">
             <span class="off">'</span>
             <span class="on">&quot;</span>
@@ -130,13 +130,13 @@
             <span class="on">&gt;</span>
         </li>
         <li class="symbol">
-            <span class="off">/</span>
-            <span class="on">?</span>
+            <span class="off">?</span>
+            <span class="on">/</span>
         </li>
         <li class="right-shift">shift</li>
     </ul> <!-- end of row -->
     <ul class="keyrow">
-        <li class="space lastitem">&nbsp; (space)</li>
+        <li class="space lastitem">&nbsp;</li>
     </ul> <!-- end of row -->
 </section>
 
