simplification of the keyboard, allcaps key is working

--- a/public/custom-keyboard/index.html
+++ b/public/custom-keyboard/index.html
@@ -11,61 +11,60 @@
     <input type="submit" data-type="reponse" value ="↪" class="submit">
 </section>
 <section id="custom-keyboard">
-    <ul class="keyrow">
-            <li class="symbol">
-                <span class="off">`</span>
-                <span class="on">~</span>
-            </li>
-            <li class="symbol">
-                <span class="off">1</span>
-                <span class="on">!</span>
-            </li>
-            <li class="symbol">
-                <span class="off">2</span>
-                <span class="on">@</span>
-            </li>
-            <li class="symbol">
-                <span class="off">3</span>
-                <span class="on">#</span>
-            </li>
-            <li class="symbol">
-                <span class="off">4</span>
-                <span class="on">$</span>
-            </li>
-            <li class="symbol">
-                <span class="off">5</span>
-                <span class="on">%</span>
-            </li>
-            <li class="symbol">
-                <span class="off">6</span>
-                <span class="on">^</span>
-            </li>
-            <li class="symbol">
-                <span class="off">7</span>
-                <span class="on">&amp;</span>
-            </li>
-            <li class="symbol">
-                <span class="off">8</span>
-                <span class="on">*</span>
-            </li>
-            <li class="symbol">
-                <span class="off">9</span>
-                <span class="on">(</span>
-            </li>
-            <li class="symbol">
-                <span class="off">0</span>
-                <span class="on">)</span>
-            </li>
+    <!--<ul class="keyrow">-->
+            <!--&lt;!&ndash;<li class="symbol">&ndash;&gt;-->
+                <!--&lt;!&ndash;<span class="off">`</span>&ndash;&gt;-->
+                <!--&lt;!&ndash;<span class="on">~</span>&ndash;&gt;-->
+            <!--&lt;!&ndash;</li>&ndash;&gt;-->
             <!--<li class="symbol">-->
-                <!--<span class="off">-</span>-->
-                <!--<span class="on">_</span>-->
+                <!--<span class="off">1</span>-->
+                <!--<span class="on">!</span>-->
             <!--</li>-->
             <!--<li class="symbol">-->
-                <!--<span class="off">=</span>-->
-                <!--<span class="on">+</span>-->
+                <!--<span class="off">2</span>-->
+                <!--<span class="on">@</span>-->
             <!--</li>-->
-            <li class="delete">delete</li>
-        </ul> <!-- end of row -->
+            <!--<li class="symbol">-->
+                <!--<span class="off">3</span>-->
+                <!--<span class="on">#</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">4</span>-->
+                <!--<span class="on">$</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">5</span>-->
+                <!--<span class="on">%</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">6</span>-->
+                <!--<span class="on">^</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">7</span>-->
+                <!--<span class="on">&amp;</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">8</span>-->
+                <!--<span class="on">*</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">9</span>-->
+                <!--<span class="on">(</span>-->
+            <!--</li>-->
+            <!--<li class="symbol">-->
+                <!--<span class="off">0</span>-->
+                <!--<span class="on">)</span>-->
+            <!--</li>-->
+            <!--&lt;!&ndash;<li class="symbol">&ndash;&gt;-->
+                <!--&lt;!&ndash;<span class="off">-</span>&ndash;&gt;-->
+                <!--&lt;!&ndash;<span class="on">_</span>&ndash;&gt;-->
+            <!--&lt;!&ndash;</li>&ndash;&gt;-->
+            <!--&lt;!&ndash;<li class="symbol">&ndash;&gt;-->
+                <!--&lt;!&ndash;<span class="off">=</span>&ndash;&gt;-->
+                <!--&lt;!&ndash;<span class="on">+</span>&ndash;&gt;-->
+            <!--&lt;!&ndash;</li>&ndash;&gt;-->
+        <!--</ul> &lt;!&ndash; end of row &ndash;&gt;-->
     <ul class="keyrow">
         <!--<li class="tab">tab</li>-->
         <li class="letter">q</li>
@@ -92,7 +91,6 @@
         <!--</li>-->
     </ul> <!-- end of row -->
     <ul class="keyrow">
-    <li class="capslock">caps lock</li>
         <li class="letter">a</li>
         <li class="letter">s</li>
         <li class="letter">d</li>
@@ -106,14 +104,13 @@
             <!--<span class="off">;</span>-->
             <!--<span class="on">:</span>-->
         <!--</li>-->
-        <li class="symbol">
-            <span class="off">'</span>
-            <span class="on">&quot;</span>
-        </li>
-        <li class="return">return</li>
+        <!--<li class="symbol">-->
+            <!--<span class="off">'</span>-->
+            <!--<span class="on">&quot;</span>-->
+        <!--</li>-->
     </ul> <!-- end of row -->
     <ul class="keyrow">
-    <li class="left-shift">shift</li>
+        <li class="capslock">&#9050;</li>
         <li class="letter">z</li>
         <li class="letter">x</li>
         <li class="letter">c</li>
@@ -121,22 +118,27 @@
         <li class="letter">b</li>
         <li class="letter">n</li>
         <li class="letter">m</li>
-        <li class="symbol">
-            <span class="off">,</span>
-            <span class="on">&lt;</span>
-        </li>
-        <li class="symbol">
-            <span class="off">.</span>
-            <span class="on">&gt;</span>
-        </li>
-        <li class="symbol">
-            <span class="off">?</span>
-            <span class="on">/</span>
-        </li>
-        <li class="right-shift">shift</li>
+        <li class="delete">&#9003;</li>
+        <!--<li class="symbol">-->
+            <!--<span class="off">,</span>-->
+            <!--<span class="on">&lt;</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+            <!--<span class="off">.</span>-->
+            <!--<span class="on">&gt;</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+            <!--<span class="off">?</span>-->
+            <!--<span class="on">/</span>-->
+        <!--</li>-->
     </ul> <!-- end of row -->
     <ul class="keyrow">
+        <li class="numbers">?123</li>
+        <li class="comma">,</li>
+        <li class="smiley">&#9786;</li>
         <li class="space lastitem">&nbsp;</li>
+        <li class="point">.</li>
+        <li class="return">&#8629;</li>
     </ul> <!-- end of row -->
 </section>
 
