--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Chat</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="custom-keyboard/keyboard.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -20,7 +21,7 @@
 <section class="autocomplete-aera"></section>
 
 <section class="controls">
-    <input type="text" name="say" class="inputSay">
+    <div class="inputSay"></div>
     <input type="submit" data-type="reponse" value ="↪" class="submit">
 </section>
 
@@ -30,9 +31,144 @@
 <!--</div>-->
 
 
+<section id="custom-keyboard">
+    <!--<ul class="keyrow">-->
+    <!--&lt;!&ndash;<li class="symbol">&ndash;&gt;-->
+    <!--&lt;!&ndash;<span class="off">`</span>&ndash;&gt;-->
+    <!--&lt;!&ndash;<span class="on">~</span>&ndash;&gt;-->
+    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">1</span>-->
+    <!--<span class="on">!</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">2</span>-->
+    <!--<span class="on">@</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">3</span>-->
+    <!--<span class="on">#</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">4</span>-->
+    <!--<span class="on">$</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">5</span>-->
+    <!--<span class="on">%</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">6</span>-->
+    <!--<span class="on">^</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">7</span>-->
+    <!--<span class="on">&amp;</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">8</span>-->
+    <!--<span class="on">*</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">9</span>-->
+    <!--<span class="on">(</span>-->
+    <!--</li>-->
+    <!--<li class="symbol">-->
+    <!--<span class="off">0</span>-->
+    <!--<span class="on">)</span>-->
+    <!--</li>-->
+    <!--&lt;!&ndash;<li class="symbol">&ndash;&gt;-->
+    <!--&lt;!&ndash;<span class="off">-</span>&ndash;&gt;-->
+    <!--&lt;!&ndash;<span class="on">_</span>&ndash;&gt;-->
+    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+    <!--&lt;!&ndash;<li class="symbol">&ndash;&gt;-->
+    <!--&lt;!&ndash;<span class="off">=</span>&ndash;&gt;-->
+    <!--&lt;!&ndash;<span class="on">+</span>&ndash;&gt;-->
+    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+    <!--</ul> &lt;!&ndash; end of row &ndash;&gt;-->
+    <ul class="keyrow">
+        <!--<li class="tab">tab</li>-->
+        <li class="letter">q</li>
+        <li class="letter">w</li>
+        <li class="letter">e</li>
+        <li class="letter">r</li>
+        <li class="letter">t</li>
+        <li class="letter">y</li>
+        <li class="letter">u</li>
+        <li class="letter">i</li>
+        <li class="letter">o</li>
+        <li class="letter">p</li>
+        <!--<li class="symbol">-->
+        <!--<span class="off">[</span>-->
+        <!--<span class="on">{</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+        <!--<span class="off">]</span>-->
+        <!--<span class="on">}</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+        <!--<span class="off">\</span>-->
+        <!--<span class="on">|</span>-->
+        <!--</li>-->
+    </ul> <!-- end of row -->
+    <ul class="keyrow">
+        <li class="letter">a</li>
+        <li class="letter">s</li>
+        <li class="letter">d</li>
+        <li class="letter">f</li>
+        <li class="letter">g</li>
+        <li class="letter">h</li>
+        <li class="letter">j</li>
+        <li class="letter">k</li>
+        <li class="letter">l</li>
+        <!--<li class="symbol">-->
+        <!--<span class="off">;</span>-->
+        <!--<span class="on">:</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+        <!--<span class="off">'</span>-->
+        <!--<span class="on">&quot;</span>-->
+        <!--</li>-->
+    </ul> <!-- end of row -->
+    <ul class="keyrow">
+        <li class="capslock">&#9050;</li>
+        <li class="letter">z</li>
+        <li class="letter">x</li>
+        <li class="letter">c</li>
+        <li class="letter">v</li>
+        <li class="letter">b</li>
+        <li class="letter">n</li>
+        <li class="letter">m</li>
+        <li class="delete">&#9003;</li>
+        <!--<li class="symbol">-->
+        <!--<span class="off">,</span>-->
+        <!--<span class="on">&lt;</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+        <!--<span class="off">.</span>-->
+        <!--<span class="on">&gt;</span>-->
+        <!--</li>-->
+        <!--<li class="symbol">-->
+        <!--<span class="off">?</span>-->
+        <!--<span class="on">/</span>-->
+        <!--</li>-->
+    </ul> <!-- end of row -->
+    <ul class="keyrow">
+        <li class="numbers">?123</li>
+        <li class="comma">,</li>
+        <li class="smiley">&#9786;</li>
+        <li class="space lastitem">&nbsp;</li>
+        <li class="point">.</li>
+        <li class="return">&#8629;</li>
+    </ul> <!-- end of row -->
+</section>
+
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="client.js"></script>
 <script src="autocomplete.js"></script>
+<script type="text/javascript" src="custom-keyboard/keyboard.js"></script>
+
 
 
 </body>
