move the function of the 'keydown' listener to a 'click' listener on the keyboard

--- a/public/custom-keyboard/index.html
+++ b/public/custom-keyboard/index.html
@@ -136,7 +136,7 @@
         <li class="numbers">?123</li>
         <li class="comma">,</li>
         <li class="smiley">&#9786;</li>
-        <li class="space lastitem">&nbsp;</li>
+        <li class="space letter">&nbsp;</li>
         <li class="point">.</li>
         <li class="return">&#8629;</li>
     </ul> <!-- end of row -->
