styling of the interface, improving the typing input (for spaces)

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 <!--</div>-->
 
 
+
 <section id="custom-keyboard">
     <!--<ul class="keyrow">-->
     <!--&lt;!&ndash;<li class="symbol">&ndash;&gt;-->
@@ -157,19 +158,17 @@
         <li class="numbers">?123</li>
         <li class="comma">,</li>
         <li class="smiley">&#9786;</li>
-        <li class="space lastitem">&nbsp;</li>
+        <li class="space letter"> </li>
         <li class="point">.</li>
         <li class="return">&#8629;</li>
     </ul> <!-- end of row -->
 </section>
 
-
 <script src="/socket.io/socket.io.js"></script>
 <script src="client.js"></script>
 <script src="autocomplete.js"></script>
-<script type="text/javascript" src="custom-keyboard/keyboard.js"></script>
-
-
+<script src="custom-keyboard/keyboard.js"></script>
+<script src="responsive.js"></script>
 
 </body>
 </html>
